--- a/index.html
+++ b/index.html
@@ -182,7 +182,6 @@ function buildTeamsContent(){
     const teamDiv=document.createElement("div");
     const title=document.createElement("h4"); title.textContent=team.name; teamDiv.appendChild(title);
 
-    // Show site/in/out only if NOT OFF
     if(team.name !== "OFF"){
       const siteSelect = document.createElement("select");
       const emptyOpt = document.createElement("option");
@@ -216,71 +215,122 @@ function buildTeamsContent(){
       teamDiv.appendChild(wrap);
     }
 
-    // Employee list
-    const ul=document.createElement("ul"); 
-    team.employees.forEach(emp=>{
-      const li=document.createElement("li"); 
-      li.className="employee-item";
-      li.draggable=true; // Drag enabled
-      li.dataset.empname=emp.name;
-      li.dataset.team=team.name;
+    // OFF team handling
+    if(team.name === "OFF"){
+      const offDiv = document.createElement("div");
+      offDiv.innerHTML = "<strong>OFF Employees</strong><br>";
 
-      const delBtn=document.createElement("button"); delBtn.textContent="❌";
-      delBtn.onclick=()=>{ 
-        team.employees = team.employees.filter(e=>e.id!==emp.id); 
-        buildTeamsContent(); 
-        buildTableForDateRange(selectedDate,selectedDate,filterInput.value.trim().toLowerCase()); 
-      };
-      li.appendChild(delBtn); li.appendChild(document.createTextNode(emp.name));
-      ul.appendChild(li);
-    });
-    teamDiv.appendChild(ul);
+      // Current OFF employees
+      const ul = document.createElement("ul");
+      team.employees.forEach(emp=>{
+        const li = document.createElement("li");
+        li.textContent = emp.name;
+        const delBtn = document.createElement("button");
+        delBtn.textContent = "❌";
+        delBtn.onclick = ()=>{
+          team.employees = team.employees.filter(e=>e.id!==emp.id);
+          buildTeamsContent();
+        };
+        li.prepend(delBtn);
+        ul.appendChild(li);
+      });
+      offDiv.appendChild(ul);
 
-    // Available employees
-    const assignedIds = teams.flatMap(t=>t.employees.map(e=>e.name));
-    const remaining = masterEmployees.filter(empName=>!assignedIds.includes(empName));
-    const availDiv=document.createElement("div"); availDiv.className="available-employees";
-    remaining.forEach(empName=>{
-      const div=document.createElement("div"); div.textContent=empName;
-      div.onclick=()=>{
-        const emp={ id:Date.now(), name:empName, team:team.name, site:"" };
-        team.employees.push(emp);
+      // Available employees to add
+      const assignedNames = teams.flatMap(t=>t.employees.map(e=>e.name));
+      const remaining = masterEmployees.filter(empName=>!assignedNames.includes(empName));
+
+      const availDiv = document.createElement("div");
+      availDiv.className="available-employees";
+      remaining.forEach(empName=>{
+        const div = document.createElement("div");
+        div.textContent = empName;
+        div.onclick = ()=>{
+          const emp={ id:Date.now(), name:empName, team:"OFF" };
+          team.employees.push(emp);
+          buildTeamsContent();
+        };
+        availDiv.appendChild(div);
+      });
+      offDiv.appendChild(availDiv);
+
+      // Save button
+      const saveBtn = document.createElement("button");
+      saveBtn.textContent = "Save OFF List";
+      saveBtn.onclick = ()=>{
         saveTeams();
-        buildTeamsContent(); 
-        buildTableForDateRange(selectedDate,selectedDate,filterInput.value.trim().toLowerCase());
+        alert("✅ OFF list saved for "+selectedDate);
+        buildTableForDateRange(selectedDate, selectedDate);
       };
-      availDiv.appendChild(div);
-    });
-    teamDiv.appendChild(availDiv);
+      offDiv.appendChild(saveBtn);
 
-    // Drag drop area
-    teamDiv.ondragover=e=>{e.preventDefault();};
-    teamDiv.ondrop=e=>{
-      const empName=e.dataTransfer.getData("empname");
-      const fromTeam=e.dataTransfer.getData("team");
-      if(!empName || !fromTeam) return;
-      const empObj=teams.find(t=>t.name===fromTeam).employees.find(e=>e.name===empName);
-      if(!empObj) return;
-      // remove from old team
-      teams.find(t=>t.name===fromTeam).employees = teams.find(t=>t.name===fromTeam).employees.filter(e=>e.name!==empName);
-      // add to new team
-      empObj.team=team.name;
-      teams.find(t=>t.name===team.name).employees.push(empObj);
-      saveTeams();
-      buildTeamsContent(); buildTableForDateRange(selectedDate,selectedDate,filterInput.value.trim().toLowerCase());
-    };
+      teamDiv.appendChild(offDiv);
+    }
+
+    // Employee list for normal teams
+    if(team.name !== "OFF"){
+      const ul=document.createElement("ul"); 
+      team.employees.forEach(emp=>{
+        const li=document.createElement("li"); 
+        li.className="employee-item";
+        li.draggable=true; 
+        li.dataset.empname=emp.name;
+        li.dataset.team=team.name;
+
+        const delBtn=document.createElement("button"); delBtn.textContent="❌";
+        delBtn.onclick=()=>{ 
+          team.employees = team.employees.filter(e=>e.id!==emp.id); 
+          buildTeamsContent(); 
+          buildTableForDateRange(selectedDate,selectedDate,filterInput.value.trim().toLowerCase()); 
+        };
+        li.appendChild(delBtn); li.appendChild(document.createTextNode(emp.name));
+        ul.appendChild(li);
+      });
+      teamDiv.appendChild(ul);
+
+      // Available employees
+      const assignedIds = teams.flatMap(t=>t.employees.map(e=>e.name));
+      const remaining = masterEmployees.filter(empName=>!assignedIds.includes(empName));
+      const availDiv=document.createElement("div"); availDiv.className="available-employees";
+      remaining.forEach(empName=>{
+        const div=document.createElement("div"); div.textContent=empName;
+        div.onclick=()=>{
+          const emp={ id:Date.now(), name:empName, team:team.name, site:"" };
+          team.employees.push(emp);
+          saveTeams();
+          buildTeamsContent(); 
+          buildTableForDateRange(selectedDate,selectedDate,filterInput.value.trim().toLowerCase());
+        };
+        availDiv.appendChild(div);
+      });
+      teamDiv.appendChild(availDiv);
+
+      // Drag & drop
+      teamDiv.ondragover=e=>{e.preventDefault();};
+      teamDiv.ondrop=e=>{
+        const empName=e.dataTransfer.getData("empname");
+        const fromTeam=e.dataTransfer.getData("team");
+        if(!empName || !fromTeam) return;
+        const empObj=teams.find(t=>t.name===fromTeam).employees.find(e=>e.name===empName);
+        if(!empObj) return;
+        teams.find(t=>t.name===fromTeam).employees = teams.find(t=>t.name===fromTeam).employees.filter(e=>e.name!==empName);
+        empObj.team=team.name;
+        teams.find(t=>t.name===team.name).employees.push(empObj);
+        saveTeams();
+        buildTeamsContent(); buildTableForDateRange(selectedDate,selectedDate,filterInput.value.trim().toLowerCase());
+      };
+
+      document.querySelectorAll(".employee-item").forEach(el=>{
+        el.addEventListener("dragstart",e=>{
+          e.dataTransfer.setData("empname", el.dataset.empname);
+          e.dataTransfer.setData("team", el.dataset.team);
+          el.classList.add("dragging");
+        });
+        el.addEventListener("dragend",()=>el.classList.remove("dragging"));
+      });
+    }
 
     menu.appendChild(teamDiv);
-  });
-
-  // Drag events
-  document.querySelectorAll(".employee-item").forEach(el=>{
-    el.addEventListener("dragstart",e=>{
-      e.dataTransfer.setData("empname", el.dataset.empname);
-      e.dataTransfer.setData("team", el.dataset.team);
-      el.classList.add("dragging");
-    });
-    el.addEventListener("dragend",()=>el.classList.remove("dragging"));
   });
 }
 
@@ -302,6 +352,7 @@ function buildTableForDateRange(from,to,filterText=""){
   Object.keys(allData).sort().filter(d=>d>=from && d<=to).forEach(date=>{
     const dateTeams = allData[date].teams;
     dateTeams.forEach(team=>team.employees.forEach(emp=>{
+      if(team.name==="OFF") return; // skip OFF for normal rows
       if(filterText && !emp.name.toLowerCase().includes(filterText)) return;
       const row=table.insertRow();
       row.insertCell(0).textContent=emp.name;
@@ -320,6 +371,17 @@ function buildTableForDateRange(from,to,filterText=""){
       if(isHoliday(date)) row.classList.add("highlight-day");
     }));
   });
+  // Add OFF row at bottom
+  const offTeam = teams.find(t=>t.name==="OFF");
+  if(offTeam && offTeam.employees.length){
+    const row = table.insertRow();
+    const cell = row.insertCell(0);
+    cell.colSpan=7;
+    cell.textContent="OFF: " + offTeam.employees.map(e=>e.name).join(", ");
+    cell.style.fontWeight="bold";
+    cell.style.background="#f0f0f0";
+  }
+
   overtimeSummary.textContent="Total Overtime: "+totalOT.toFixed(2)+" hrs";
 }
 
@@ -364,6 +426,7 @@ document.getElementById("exportCSVBtn").addEventListener("click", ()=>{
   let rows=[["Employee Name","Date","Site Name","Site In","Site Out","Total Hours","Overtime Hours"]];
   Object.keys(allData).sort().filter(d=>d>=from && d<=to).forEach(date=>{
     allData[date].teams.forEach(team=>team.employees.forEach(emp=>{
+      if(team.name==="OFF") return; // skip OFF for CSV
       let [diff,overtime]=calculateHours(emp.in||team.siteIn, emp.out||team.siteOut, date);
       rows.push([emp.name,date,emp.site||team.site,emp.in||team.siteIn||"",emp.out||team.siteOut||"",diff.toFixed(2),overtime.toFixed(2)]);
     }));
@@ -376,14 +439,16 @@ document.getElementById("exportCSVBtn").addEventListener("click", ()=>{
 
 // ==========================
 // Team Count Share
-// ==========================
-// Team Count Share (redirect)
 document.getElementById("shareTeamCountBtn").addEventListener("click", ()=>{
   let teamCounts = teams
-    .map(t => ({ name: t.name, count: t.employees.length }))
-    .filter(tc => tc.count > 0);
+    .filter(t=>t.name!=="OFF")
+    .map(t=>({ name:t.name, count:t.employees.length }))
+    .filter(tc=>tc.count>0);
 
-  localStorage.setItem("teamCounts", JSON.stringify(teamCounts));
+  const offTeam = teams.find(t=>t.name==="OFF");
+  const offNames = offTeam ? offTeam.employees.map(e=>e.name) : [];
+
+  localStorage.setItem("teamCounts", JSON.stringify({ teams: teamCounts, off: offNames }));
   window.location.href = "team_count.html";
 });
 
